@@ -126,6 +126,7 @@ https://github.com/elastic/beats/compare/v6.0.0-alpha1...v6.0.0-alpha2[View comm
 - Add the option to write the generated Elasticsearch mapping template into a file. {pull}4323[4323]
 - Add `instance_name` in GCE add_cloud_metadata processor. {pull}4414[4414]
 - Add `add_docker_metadata` processor. {pull}4352[4352]
+- Add `logging.files` `permissions` option. {pull}4295[4295]
 
 *Filebeat*
 
